test/expected/declare_sii-knr.out
declare x as signed int
             ^
14: error: "signed": unsupported type until C89; did you mean "__signed" or "unsigned"?
